# SecurePasswordManager

./: .pylintrc  LICENSE  PasswordManager.py  README.md  main.py  password_console.py  password_graphical.py  setup.cfg
.github/workflows/: pylint.yml
src/: console_interface.py  gui_interface.py  password_graphical.py  password_manager.py
src/sec_pass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/sec_pass_manager.egg-info/: PKG-INFO  SOURCES.txt
src/spm/: console_interface.py  gui_interface.py  sec_pass_manager.py
