[metadata]
name = sec_pass
version = 1.0.1
author = santipvz
author_email = santivzqzz@gmail.com
description = A password manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santipvz/SecurePasswordManager
project_urls =
    Bug Tracker = https://github.com/santipvz/SecurePasswordManager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PySimpleGUI

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cpass = spm.console_interface:main
    spm = spm.gui_interface:main


